tests/files/flow_controller_tests/should_run/039.cmdr
x = parseBool(1);
print x;