tests/files/flow_controller_tests/should_fail/102.cmdr
x = false;
print arctanh(x);